chore: fixed anchor hidden behind navbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Barlow&display=swap");
 
+html {
+  scroll-padding-top: 49px;
+}
+
 body {
   background-color: #03141b;
   font-family: "Poppins", sans-serif;
@@ -14,13 +18,14 @@ body {
 
 header {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   top: 0;
   right: 0;
   margin: 0;
   padding: 18px;
   background-color: #03141b;
   z-index: 1;
+  box-sizing: border-box;
 }
 
 ul {
